--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 
   {% if page.highlightjs %}
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
-  <script src="{{ site.baseurl }}/public/highlight.pack.js"></script>
+  <script src="{{ site.baseurl }}/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   {% else %}
   <!-- {{ page.highlightjs }} -->
