--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,16 +15,22 @@ body {
   background-color: var(--body-bg);
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+
+  @media (min-width: 30em) {
+    font-size: var(--body-font-size-desktop);
+  }
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: var(--link-color);
+  text-decoration: none;
 
   // `:focus` is linked to `:hover` for basic accessibility
   &:hover,
   &:focus {
     color: var(--link-hover-color);
+    text-decoration: underline;
   }
 
   strong {
