--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -105,6 +105,10 @@ a[href^="#fnref:"] {
   font-size: 85%;
 }
 
+.reversefootnote {
+  font-family: var(--body-font-sans-emoji);
+}
+
 // Custom type
 //
 // Extend paragraphs with `.lead` for larger introductory text.
