--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -27,7 +27,9 @@
   --yellow-100: #fff3bf;
 
   --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --body-font-sans-emoji: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Segoe UI Symbol";
   --body-font-size: 16px;
+  --body-font-size-desktop: 20px;
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
   --body-bg: #fff;
