--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     {% endif %}
   </title>
 
-  <link rel="stylesheet" href="{{ 'poole.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'styles.css' | relative_url }}">
   <link rel="shortcut icon" href="/favicon.png">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ 'atom.xml' | relative_url }}">
 
