--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,5 @@
 {% endif %}
 
 {% if page.mathjax %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-AMS_HTML"></script>
 {% endif %}
