serverside latex rendering with katex

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,8 @@
   {% if page.highlightjs %}
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
   {% endif %}
+
+  {% if page.latex %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.0/dist/katex.min.css" crossorigin="anonymous">
+  {% endif %}
 </head>
