--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,16 @@
 
     <div class="container content">
       <header class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
-        </h3>
       </header>
 
       <main>
         {{ content }}
       </main>
+
+      <h3 class="masthead-title">
+        <a href="{{ site.baseurl }}/" title="Home"></a>
+        <small>{{ site.tagline }}</small>
+      </h3>
     </div>
 
     {% if site.ga_analytics %}
